--- a/_posts/2014-09-06-001.md
+++ b/_posts/2014-09-06-001.md
@@ -4,6 +4,10 @@ title: 本地模式安装express
 description: ‘express’ 不是内部或外部命令，也不是可运行的程序或批处理文件。
 keywords: express express-generator 本地模式 全局模式
 ---
+
+##【node.js】本地模式安装express：'express' 不是内部或外部命令，也不是可运行的程序或批处理文件。
+
+
 #问题的产生
 
 在windows xp系统中的c盘安装过nodejs，之后在D盘的blog文件夹下安装express（本地模式），如下：
