--- a/_posts/2014-09-06-001.md
+++ b/_posts/2014-09-06-001.md
@@ -34,20 +34,20 @@ keywords: express express-generator 本地模式 全局模式
 
 此时，在`D:\blog\node_modules\`下有个.bin（在安装express-generator时生成）中存在express、express.cmd两个文件。
 
-##然后在系统环境变量path中添加：D:\blog\node_modules\.bin
+###然后在系统环境变量path中添加：`D:\blog\node_modules\.bin`
 
-再次尝试执行：
+##再次尝试执行：
 
 `D:\blog>express -V`
 
 `4.2.0`
 
-#就完成了express的本地模式安装。
+经过以上步骤，就完成了express的本地模式安装。
 
-#注意：
+##注意：
 
-##本地模式 `npm install express`
-##全局模式 `npm install express -g`
+###本地模式 `npm install express`
+###全局模式 `npm install express -g`
 
 
 ---
