--- a/_posts/2014-09-06-001.md
+++ b/_posts/2014-09-06-001.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: 本地模式安装express
+title: nodejs---本地模式安装express
 description: ‘express’ 不是内部或外部命令，也不是可运行的程序或批处理文件。
 keywords: express express-generator 本地模式 全局模式
 ---
