--- a/_posts/2014-09-25-001.md
+++ b/_posts/2014-09-25-001.md
@@ -1,29 +1,29 @@
 ---
 layout: post
-title: css 中两个class之间没有空格与有空格有什么区别
+title: css 中两个class之间没有空格与有空格的区别
 description: css 中两个class之间没有空格与有空格有什么区别，以及两个css之间有">"的含义。
 keywords: css >和空格 子选择器
 ---
 
 #css里的定义如下
 
-* 1、.class .sub_class {....}          ##有空格##
-* 2、.class.sub_class {....}           ##没有空格##
-* 3、.class > .sub_class {....}        ##有">"##
+* 1、.x .y {....}          ** 有空格 **
+* 2、.x.y {....}           ** 没有空格 **
+* 3、.x > .y {....}        ** 有">" **
 
 #对应于前端html页面的功能如下：
 
-* 1、.class .sub_class {....}
-     可以匹配：`<div class="class">...<div class="sub_class"></div>...</div>`；
-     ##匹配 class 类下任意包含 sub_class 元素的类（二者是祖先元素与后代元素的关系）##
-* 2、.class.sub_class {....}
-     可以匹配：`<div class="class sub_class"></div>`；
-     无法匹配：`<div class="class"></div>` 和 `<div class="sub_class"></div>`；
-	 ##匹配同时含有 class 和 sub_class 元素的类##
-* 3、.class > .sub_class {....}
-     可以匹配：`<div class="class"><div class="sub_class"></div></div>`；
-     无法匹配：`<div class="class"><div class="sec_class"><div class="sub_class"></div></div></div>`；
-	 ##匹配 class 类下直接包含 sub_class 元素的类（二者是父元素与子元素的关系，在相邻的层）##
+* 1、.x .y {....}
+     可以匹配：`<div class="x">...<div class="y"></div>...</div>`；
+     **匹配 x 类下任意包含 y 元素的类（二者是祖先元素与后代元素的关系）**
+* 2、.x.y {....}
+     可以匹配：`<div class="x y"></div>`；
+     无法匹配：`<div class="x"></div>` 和 `<div class="y"></div>`；
+	 **匹配同时含有 x 和 y 元素的类**
+* 3、.x > .y {....}
+     可以匹配：`<div class="x"><div class="y"></div></div>`；
+     无法匹配：`<div class="x"><div class="z"><div class="y"></div></div></div>`；
+	 **匹配 x 类下直接包含 y 元素的类（二者是父元素与子元素的关系，在相邻的层）**
 
 ---
 
